--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "yattairc",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"author": "datagutt",
-	"keywords": "irc library lib",
+	"keywords": ["irc", "library", "lib"],
 	"description": "",
 	"licenses": [{
 		"type": "MIT",
